[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
bleach = "6.1.0"
build = "1.2.1"
certifi = "2023.11.17"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
cryptography = "42.0.2"
docutils = "0.20.1"
idna = "3.6"
importlib-metadata = "7.0.1"
jaraco_classes = "3.3.0"
jeepney = "0.8.0"
keyring = "24.3.0"
linkify-it-py = "2.0.2"
markdown-it-py = "3.0.0"
mdit-py-plugins = "0.4.0"
mdurl = "0.1.2"
more-itertools = "10.2.0"
nanoid = "2.0.0"
nh3 = "0.2.15"
packaging = "23.2"
pkginfo = "1.10.0"
pycparser = "2.21"
Pygments = "2.17.2"
pyperclip = "1.8.2"
pyproject_hooks = "1.0.0"
pywin32-ctypes = "0.2.2"
readme-renderer = "42.0"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rfc3986 = "2.0.0"
rich = "13.7.0"
SecretStorage = "3.3.3"
six = "1.16.0"
textual = "0.48.1"
twine = "5.1.0"
typing_extensions = "4.9.0"
uc-micro-py = "1.0.2"
urllib3 = "2.2.0"
webencodings = "0.5.1"
wheel = "0.42.0"
zipp = "3.17.0"

[tool.poetry]
name = "doopass-libs"
version = "1.0.7"
authors = ["Michael Nikishov <doopath@gmail.com>"]
description = "Libraries for doopass.tui project"
readme = "README.md"
packages = [
    { from = ".", include="doopass_libs" },
    { from = "doopass_libs", include="core" },
    { from = "doopass_libs/core", include="components" },
    { from = "doopass_libs/core", include="screens" }
]
